--- a/Mobile/Live-Discount.html
+++ b/Mobile/Live-Discount.html
@@ -581,7 +581,7 @@
 
                                             '<div class="img-container">' +
 
-                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            '<img class="absolute-center-xs img" src="/images/announcemet/' +
 
                                             data.body.list[i].an_image + '" alt="">' +
 
@@ -669,7 +669,7 @@
 
                                             '<div class="img-container">' +
 
-                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            '<img class="absolute-center-xs img" src="/images/announcemet/' +
 
                                             data.body.list[i].an_image + '" alt="">' +
 
