--- a/Mobile/Member-Apply-Discount.html
+++ b/Mobile/Member-Apply-Discount.html
@@ -671,7 +671,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
+                    url: "/api/Api/setDiscountFrom?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -719,7 +719,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
+                    url: "/api/Api/setDiscountFrom?sess=" + localStorage.session,
 
                     type: "POST",
 
