--- a/Mobile/Member-CashRecord.html
+++ b/Mobile/Member-CashRecord.html
@@ -719,7 +719,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/getThirdBetByUser?sess=" + sessionStorage.session,
+                        url: "/api/Api/getThirdBetByUser?sess=" + localStorage.session,
 
                         type: "GET",
 
@@ -773,7 +773,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/getThirdBetByUser?sess=" + sessionStorage.session +
+                        url: "/api/Api/getThirdBetByUser?sess=" + localStorage.session +
 
                             "&start_date=" + _start_type + "&end_date=" + _end_type,
 
