--- a/Mobile/Member-DailyRecord.html
+++ b/Mobile/Member-DailyRecord.html
@@ -805,7 +805,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/report?sess=" + sessionStorage.session +
+                    url: "/api/Api/report?sess=" + localStorage.session +
 
                         "&type=3&p=1&limt=5",
 
@@ -1029,7 +1029,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/report?sess=" + sessionStorage.session +
+                    url: "/api/Api/report?sess=" + localStorage.session +
 
                         "&type=3&p=1&limt=5",
 
