--- a/Mobile/Member-Deposit.html
+++ b/Mobile/Member-Deposit.html
@@ -782,7 +782,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getRechargeOrder?sess=" + sessionStorage.session,
+                    url: "/api/Api/getRechargeOrder?sess=" + localStorage.session,
 
                     type: "POST",
 
