--- a/Mobile/Member-Discount.html
+++ b/Mobile/Member-Discount.html
@@ -695,7 +695,7 @@
 
                                             '<div class="img-container">' +
 
-                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            '<img class="absolute-center-xs img" src="/images/announcemet/' +
 
                                             data.body.list[i].an_image + '" alt="">' +
 
@@ -783,7 +783,7 @@
 
                                             '<div class="img-container">' +
 
-                                            '<img class="absolute-center-xs img" src="images/announcemet/' +
+                                            '<img class="absolute-center-xs img" src="/images/announcemet/' +
 
                                             data.body.list[i].an_image + '" alt="">' +
 
