--- a/Mobile/Member-Password.html
+++ b/Mobile/Member-Password.html
@@ -791,7 +791,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -843,7 +843,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserPassword?sess=" + localStorage.session,
 
                         type: "POST",
 
@@ -897,7 +897,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserMoneyPassword?sess=" + localStorage.session,
 
                         type: "POST",
 
@@ -957,7 +957,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserMoneyPassword?sess=" + localStorage.session,
 
                         type: "POST",
 
