--- a/Mobile/Member-Register.html
+++ b/Mobile/Member-Register.html
@@ -675,7 +675,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getRegisteredLink?sess=" + sessionStorage.session,
+                    url: "/api/Api/getRegisteredLink?sess=" + localStorage.session,
 
                     type: "POST",
 
@@ -723,7 +723,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/addRegisteredLink?sess=" + sessionStorage.session,
+                    url: "/api/Api/addRegisteredLink?sess=" + localStorage.session,
 
                     type: "POST",
 
