--- a/Mobile/Member-Transfer.html
+++ b/Mobile/Member-Transfer.html
@@ -751,7 +751,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -779,7 +779,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getThirdBlance?sess=" + sessionStorage.session,
+                    url: "/api/Api/getThirdBlance?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -841,7 +841,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/transferToThird?sess=" + sessionStorage.session + "&amount=" +
+                        url: "/api/Api/transferToThird?sess=" + localStorage.session + "&amount=" +
                             _cash_nam1,
 
                         type: "GET",
@@ -876,7 +876,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/transferToLdyl?sess=" + sessionStorage.session + "&amount=" +
+                        url: "/api/Api/transferToLdyl?sess=" + localStorage.session + "&amount=" +
                             _cash_nam1,
 
                         type: "GET",
