--- a/Mobile/Member-Withdrawal.html
+++ b/Mobile/Member-Withdrawal.html
@@ -733,7 +733,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -775,7 +775,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -803,7 +803,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -849,7 +849,7 @@
 
                         $.ajax({
 
-                            url: "/api/Api/withdrawal?sess=" + sessionStorage.session,
+                            url: "/api/Api/withdrawal?sess=" + localStorage.session,
 
                             type: "POST",
 
@@ -905,7 +905,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/checkMoneyPasswd?sess=" + localStorage.session,
 
                     type: "POST",
 
@@ -951,7 +951,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + localStorage.session,
 
                     type: "GET",
 
