--- a/Mobile/Home-Index.html
+++ b/Mobile/Home-Index.html
@@ -619,7 +619,7 @@
 
                 var _key = $(this).attr('data-game-code');
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                if (localStorage.session == undefined || localStorage.session == '') {
 
                     alert('请先登入会员');
 
@@ -627,7 +627,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
+                        url: "/api/Api/getGameUrl?sess=" + localStorage.session + "&game_code=" +
                             _key + "&platform=html5",
 
                         type: "GET",
