--- a/Member-Apply-Discount.html
+++ b/Member-Apply-Discount.html
@@ -692,7 +692,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
+                    url: "/api/Api/setDiscountFrom?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -740,7 +740,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
+                    url: "/api/Api/setDiscountFrom?sess=" + localStorage.session,
 
                     type: "POST",
 
