--- a/Member-CardManagement.html
+++ b/Member-CardManagement.html
@@ -758,7 +758,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/setUserBankInfoForm?sess=" + sessionStorage.session +
+                    url: "/api/Api/setUserBankInfoForm?sess=" + localStorage.session +
 
                         "&p=1&limit=5",
 
@@ -834,7 +834,7 @@
 
                         $.ajax({
 
-                            url: "/api/Api/lockUserBankCard?sess=" + sessionStorage
+                            url: "/api/Api/lockUserBankCard?sess=" + localStorage
 
                                 .session,
 
@@ -888,7 +888,7 @@
 
                         $.ajax({
 
-                            url: "/api/Api/delUserBankCard?sess=" + sessionStorage
+                            url: "/api/Api/delUserBankCard?sess=" + localStorage
 
                                 .session,
 
@@ -964,7 +964,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserBankInfo?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserBankInfo?sess=" + localStorage.session,
 
                         type: "POST",
 
@@ -1068,7 +1068,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/checkMoneyPasswd?sess=" + localStorage.session,
 
                     type: "POST",
 
@@ -1116,7 +1116,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + localStorage.session,
 
                     type: "GET",
 
