--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -830,7 +830,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/report?sess=" + sessionStorage.session ,
+                    url: "/api/Api/report?sess=" + localStorage.session ,
 
                     type: "POST",
 
@@ -1052,7 +1052,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/report?sess=" + sessionStorage.session ,
+                    url: "/api/Api/report?sess=" + localStorage.session ,
 
                     type: "POST",
 
