--- a/Member-Password.html
+++ b/Member-Password.html
@@ -812,7 +812,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -864,7 +864,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserPassword?sess=" + localStorage.session,
 
                         type: "POST",
 
@@ -918,7 +918,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserMoneyPassword?sess=" + localStorage.session,
 
                         type: "POST",
 
@@ -978,7 +978,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserMoneyPassword?sess=" + localStorage.session,
 
                         type: "POST",
 
