--- a/Member-Withdrawal.html
+++ b/Member-Withdrawal.html
@@ -754,7 +754,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -796,7 +796,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -824,7 +824,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + localStorage.session,
 
                     type: "GET",
 
@@ -870,7 +870,7 @@
 
                         $.ajax({
 
-                            url: "/api/Api/withdrawal?sess=" + sessionStorage.session,
+                            url: "/api/Api/withdrawal?sess=" + localStorage.session,
 
                             type: "POST",
 
@@ -926,7 +926,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/checkMoneyPasswd?sess=" + localStorage.session,
 
                     type: "POST",
 
@@ -972,7 +972,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + localStorage.session,
 
                     type: "GET",
 
