--- a/Live-Entertainment.html
+++ b/Live-Entertainment.html
@@ -729,7 +729,7 @@
 
                 var _key = $(this).attr('data-game-code');
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                if (localStorage.session == undefined || localStorage.session == '') {
 
                     alert('请先登入会员');
 
@@ -737,7 +737,7 @@
 
                     $.ajax({
 
-                    url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" + _key + "&platform=html5",
+                    url: "/api/Api/getGameUrl?sess=" + localStorage.session + "&game_code=" + _key + "&platform=html5",
 
                     type: "GET",
 
