--- a/Member-Message.html
+++ b/Member-Message.html
@@ -724,7 +724,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getUserMessageList?sess=" + sessionStorage.session +
+                    url: "/api/Api/getUserMessageList?sess=" + localStorage.session +
 
                         "&p=1$limit=5",
 
@@ -788,7 +788,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getUserMessage?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUserMessage?sess=" + localStorage.session,
 
                     type: "POST",
 
@@ -858,7 +858,7 @@
 
                         url: "/api/Api/sendSuperiorUserMessage?sess=" +
 
-                            sessionStorage.session,
+                            localStorage.session,
 
                         type: "POST",
 
@@ -900,7 +900,7 @@
 
                         url: "/api/Api/sendSubordinateUserMessage?sess=" +
 
-                            sessionStorage.session,
+                            localStorage.session,
 
                         type: "POST",
 
@@ -944,7 +944,7 @@
 
                         url: "/api/Api/sendSubordinateUserMessage?sess=" +
 
-                            sessionStorage.session,
+                            localStorage.session,
 
                         type: "POST",
 
