--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -252,11 +252,7 @@
 
                         </li>
 
-                        <li>
-
-                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
-
-                        </li>
+                        <li style="display:none;">
 
                         <li>
 
