--- a/Mobile/Home-Index.html
+++ b/Mobile/Home-Index.html
@@ -120,7 +120,7 @@
 
                     <li class="jq-nav-option">
 
-                        <a href="Live-App.html">手机APP</a>
+                        <a href="Live-Entertainment.html">手机APP</a>
 
                     </li>
 
@@ -429,7 +429,7 @@
                         <p class="title">收件人</p>
 
                         <input class="input" type="text" name="message-name" placeholder="请输入收件人资讯">
-
+f
                     </div>
 
                     <div class="row">
