--- a/Mobile/Member-DailyRecord.html
+++ b/Mobile/Member-DailyRecord.html
@@ -122,7 +122,7 @@
 
                     <li class="jq-nav-option">
 
-                        <a href="Live-App.html">手机APP</a>
+                        <a href="Live-Entertainment.html">手机APP</a>
 
                     </li>
 
