--- a/Mobile/Member-Deposit.html
+++ b/Mobile/Member-Deposit.html
@@ -120,7 +120,7 @@
 
                     <li class="jq-nav-option">
 
-                        <a href="Live-App.html">手机APP</a>
+                        <a href="Live-Entertainment.html">手机APP</a>
 
                     </li>
 
