--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -336,7 +336,7 @@
 
                                         <div class="tr">
 
-                                            <div class="th">充值时间</div>																						                                            <div class="th">充值时间</div>
+                                            <div class="th">充值时间</div>																						<div class="th">充值类型</div>																						<div class="th">订单号</div>																					
 
                                             <div class="th">充值金额</div>
 
@@ -1081,7 +1081,7 @@
                                                 i]
 
                                             .ua_add_datetime + '</div>' +
-
+											'<div class="td" data-title="订单号">' + data.body.list[                                                i]                                            .ua_type_1 + '</div>' +																						'<div class="td" data-title="充值类型">' + data.body.list[                                                i]                                            .uro_orderid + '</div>' +
                                             '<div class="td" data-title="充值金额">' + data.body.list[
 
                                                 i]
