--- a/Member-Discount.html
+++ b/Member-Discount.html
@@ -114,7 +114,7 @@
 
 
 
-                            <input class="account" type="text" name="account" placeholder="游戏账号">
+                            <input class="account" type="text" name="login-account" placeholder="游戏账号">
 
 
 
@@ -130,7 +130,7 @@
 
 
 
-                            <input class="password" type="password" name="passwd" placeholder="游戏密码">
+                            <input class="password" type="password" name="login-passwd" placeholder="游戏密码">
 
 
 
@@ -450,7 +450,7 @@
 
 
 
-                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转换金额</a>
 
 
 
@@ -526,7 +526,7 @@
 
 
 
-                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+                            <a href="Member-Register.html" class="btn btn-solid-blue">注册码管理</a>
 
 
 
@@ -850,7 +850,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入注册码...">
 
 
 
