--- a/Mobile/Home-Index.html
+++ b/Mobile/Home-Index.html
@@ -34,15 +34,15 @@
 
 
 
-    <link rel="stylesheet" href="font/style.css">
+    <link rel="stylesheet" href="/font/style.css">
 
 
 
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.carousel.min.css">
 
 
 
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.theme.default.min.css">
 
 
 
@@ -106,7 +106,7 @@
 
                     <a href="Home-Index.html">
 
-                        <img src="img/logo.png" alt="乐鼎国际">
+                        <img src="/img/logo.png" alt="乐鼎国际">
 
                     </a>
 
@@ -270,7 +270,7 @@
 
 
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-entertainment-list">
 
 
 
@@ -278,11 +278,195 @@
 
 
 
-                    <p class="title">热门游戏推荐</p>
+                    <p class="title">AG旗舰好路推荐</p>
 
 
 
-                    <div class="list-group clear"></div>
+                    <div class="list-group clear">
+
+
+
+                        <div class="col-xs-12 jq-entertainment-list">
+
+
+
+
+
+
+
+                        </div>
+
+
+
+                        <div class="col-xs-12">
+
+
+
+                            <div class="row" style="background-image: url(/img/live-bg2.png);">
+
+
+
+                                <div class="tag" style="background-image: url(img/live-tag1.png);">
+
+
+
+                                    <img src="/img/live-tag2.png" alt="">
+
+
+
+                                    <p class="rank-num">1</p>
+
+
+
+                                </div>
+
+
+
+                                <p class="title">
+
+
+
+                                    <span>B01</span>
+
+
+
+                                    <span>24小时玩家盈利</span>
+
+
+
+                                </p>
+
+
+
+                                <p class="price-num">$ 2,514,508</p>
+
+
+
+                                <a class="btn btn-bg-orange" href="javascript:void(0)">
+
+
+
+                                    <span>跟注发财</span>
+
+
+
+                                </a>
+
+
+
+                            </div>
+
+
+
+                            <div class="row" style="background-image: url(/img/live-bg3.jpg);">
+
+
+
+                                <div class="tag" style="background-image: url(img/live-tag3.png);">
+
+
+
+                                    <p class="rank-num">2</p>
+
+
+
+                                </div>
+
+
+
+                                <p class="title">
+
+
+
+                                    <span>B01</span>
+
+
+
+                                    <span>24小时玩家盈利</span>
+
+
+
+                                </p>
+
+
+
+                                <p class="price-num">$ 2,514,508</p>
+
+
+
+                                <a class="btn btn-bg-orange" href="javascript:void(0)">
+
+
+
+                                    <span>跟注发财</span>
+
+
+
+                                </a>
+
+
+
+                            </div>
+
+
+
+                            <div class="row" style="background-image: url(/img/live-bg3.jpg);">
+
+
+
+                                <div class="tag" style="background-image: url(img/live-tag4.png);">
+
+
+
+                                    <p class="rank-num">3</p>
+
+
+
+                                </div>
+
+
+
+                                <p class="title">
+
+
+
+                                    <span>B01</span>
+
+
+
+                                    <span>24小时玩家盈利</span>
+
+
+
+                                </p>
+
+
+
+                                <p class="price-num">$ 2,514,508</p>
+
+
+
+                                <a class="btn btn-bg-orange" href="javascript:void(0)">
+
+
+
+                                    <span>跟注发财</span>
+
+
+
+                                </a>
+
+
+
+                            </div>
+
+
+
+                        </div>
+
+
+
+                    </div>
 
 
 
@@ -422,7 +606,7 @@
 
 
 
-                    <img class="img" src="img/service.png" alt="">
+                    <img class="img" src="/img/service.png" alt="">
 
 
 
@@ -522,7 +706,7 @@
 
                         <i class="icon-ic-user3"></i>
 
-                        <input class="input" type="text" name="account" placeholder="请输入帐号...">
+                        <input class="input" type="text" name="login-account" placeholder="请输入帐号...">
 
                     </div>
 
@@ -530,7 +714,7 @@
 
                         <i class="icon-ic-lock1"></i>
 
-                        <input class="input" type="password" name="passwd" placeholder="请输入密码...">
+                        <input class="input" type="password" name="login-passwd" placeholder="请输入密码...">
 
                     </div>
 
@@ -586,7 +770,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入注册码...">
 
 
 
@@ -1042,15 +1226,15 @@
 
 
 
-        <script src="js/jquery.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
 
 
 
-        <script src="js/script.js"></script>
+        <script src="/js/script.js"></script>
 
 
 
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
 
 
 
@@ -1077,7 +1261,7 @@
 
 
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/getGameList?game_type=LIVE&p=1&limit=9999&platform=html5&client_type=web",
 
 
 
@@ -1089,7 +1273,7 @@
 
 
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        var _each = $(".jq-entertainment-list");
 
 
 
