--- a/Mobile/Live-Entertainment.html
+++ b/Mobile/Live-Entertainment.html
@@ -34,15 +34,15 @@
 
 
 
-    <link rel="stylesheet" href="font/style.css">
+    <link rel="stylesheet" href="/font/style.css">
 
 
 
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.carousel.min.css">
 
 
 
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.theme.default.min.css">
 
 
 
@@ -106,7 +106,7 @@
 
                     <a href="Home-Index.html">
 
-                        <img src="img/logo.png" alt="乐鼎国际">
+                        <img src="/img/logo.png" alt="乐鼎国际">
 
                     </a>
 
@@ -302,7 +302,7 @@
 
 
 
-                            <div class="row" style="background-image: url(img/live-bg2.png);">
+                            <div class="row" style="background-image: url(/img/live-bg2.png);">
 
 
 
@@ -310,7 +310,7 @@
 
 
 
-                                    <img src="img/live-tag2.png" alt="">
+                                    <img src="/img/live-tag2.png" alt="">
 
 
 
@@ -358,7 +358,7 @@
 
 
 
-                            <div class="row" style="background-image: url(img/live-bg3.jpg);">
+                            <div class="row" style="background-image: url(/img/live-bg3.jpg);">
 
 
 
@@ -410,7 +410,7 @@
 
 
 
-                            <div class="row" style="background-image: url(img/live-bg3.jpg);">
+                            <div class="row" style="background-image: url(/img/live-bg3.jpg);">
 
 
 
@@ -606,7 +606,7 @@
 
 
 
-                    <img class="img" src="img/service.png" alt="">
+                    <img class="img" src="/img/service.png" alt="">
 
 
 
@@ -706,7 +706,7 @@
 
                         <i class="icon-ic-user3"></i>
 
-                        <input class="input" type="text" name="account" placeholder="请输入帐号...">
+                        <input class="input" type="text" name="login-account" placeholder="请输入帐号...">
 
                     </div>
 
@@ -714,7 +714,7 @@
 
                         <i class="icon-ic-lock1"></i>
 
-                        <input class="input" type="password" name="passwd" placeholder="请输入密码...">
+                        <input class="input" type="password" name="login-passwd" placeholder="请输入密码...">
 
                     </div>
 
@@ -770,7 +770,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入注册码...">
 
 
 
@@ -1226,15 +1226,15 @@
 
 
 
-        <script src="js/jquery.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
 
 
 
-        <script src="js/script.js"></script>
+        <script src="/js/script.js"></script>
 
 
 
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
 
 
 
