--- a/Live-Notice.html
+++ b/Live-Notice.html
@@ -114,7 +114,7 @@
 
 
 
-                            <input class="account" type="text" name="login-account" placeholder="游戏账号">
+                            <input class="account" type="text" name="account" placeholder="游戏账号">
 
 
 
@@ -130,7 +130,7 @@
 
 
 
-                            <input class="password" type="password" name="login-passwd" placeholder="游戏密码">
+                            <input class="password" type="password" name="passwd" placeholder="游戏密码">
 
 
 
@@ -630,7 +630,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入注册码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
 
 
 
