--- a/Mobile/Live-Notice.html
+++ b/Mobile/Live-Notice.html
@@ -34,19 +34,19 @@
 
 
 
-    <link rel="stylesheet" href="/font/style.css">
+    <link rel="stylesheet" href="font/style.css">
 
 
 
-    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
 
 
 
-    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
 
 
-    <link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
 
 
 
@@ -110,7 +110,7 @@
 
                     <a href="Home-Index.html">
 
-                        <img src="/img/logo.png" alt="乐鼎国际">
+                        <img src="img/logo.png" alt="乐鼎国际">
 
                     </a>
 
@@ -422,7 +422,7 @@
 
 
 
-                    <img class="img" src="/img/service.png" alt="">
+                    <img class="img" src="img/service.png" alt="">
 
 
 
@@ -518,7 +518,7 @@
 
                         <i class="icon-ic-user3"></i>
 
-                        <input class="input" type="text" name="login-account" placeholder="请输入帐号...">
+                        <input class="input" type="text" name="account"  placeholder="请输入帐号...">
 
                     </div>
 
@@ -526,7 +526,7 @@
 
                         <i class="icon-ic-lock1"></i>
 
-                        <input class="input" type="password" name="login-passwd" placeholder="请输入密码...">
+                        <input class="input" type="password" name="passwd"  placeholder="请输入密码...">
 
                     </div>
 
@@ -582,7 +582,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入注册码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
 
 
 
@@ -782,7 +782,7 @@
 
 
 
-                        <select class="select" name="message-type">
+                        <select class="select" name="message-type" >
 
 
 
@@ -1038,19 +1038,19 @@
 
 
 
-        <script src="/js/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
 
 
 
-        <script src="/js/script.js"></script>
+        <script src="js/script.js"></script>
 
 
 
-        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
 
 
-        <script src="/lib/jquery-ui/jquery-ui.min.js"></script>
+        <script src="lib/jquery-ui/jquery-ui.min.js"></script>
 
 
 
