--- a/Mobile/Member-Discount.html
+++ b/Mobile/Member-Discount.html
@@ -34,19 +34,19 @@
 
 
 
-    <link rel="stylesheet" href="/font/style.css">
+    <link rel="stylesheet" href="font/style.css">
 
 
 
-    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
 
 
 
-    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
 
 
-    <link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
 
 
 
@@ -110,7 +110,7 @@
 
                     <a href="Home-Index.html">
 
-                        <img src="/img/logo.png" alt="乐鼎国际">
+                        <img src="img/logo.png" alt="乐鼎国际">
 
                     </a>
 
@@ -366,7 +366,7 @@
 
 
 
-                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转换金额</a>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
 
 
 
@@ -442,7 +442,7 @@
 
 
 
-                            <a href="Member-Register.html" class="btn btn-solid-blue">注册码管理</a>
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
 
 
 
@@ -638,7 +638,7 @@
 
 
 
-                    <img class="img" src="/img/service.png" alt="">
+                    <img class="img" src="img/service.png" alt="">
 
 
 
@@ -738,7 +738,7 @@
 
                         <i class="icon-ic-user3"></i>
 
-                        <input class="input" type="text" name="login-account" placeholder="请输入帐号...">
+                        <input class="input" type="text" name="account"  placeholder="请输入帐号...">
 
                     </div>
 
@@ -746,7 +746,7 @@
 
                         <i class="icon-ic-lock1"></i>
 
-                        <input class="input" type="password" name="login-passwd" placeholder="请输入密码...">
+                        <input class="input" type="password" name="passwd"  placeholder="请输入密码...">
 
                     </div>
 
@@ -802,7 +802,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入注册码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
 
 
 
@@ -1002,7 +1002,7 @@
 
 
 
-                        <select class="select" name="message-type">
+                        <select class="select" name="message-type" >
 
 
 
@@ -1258,19 +1258,19 @@
 
 
 
-        <script src="/js/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
 
 
 
-        <script src="/js/script.js"></script>
+        <script src="js/script.js"></script>
 
 
 
-        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
 
 
-        <script src="/lib/jquery-ui/jquery-ui.min.js"></script>
+        <script src="lib/jquery-ui/jquery-ui.min.js"></script>
 
 
 
