假資料 銀行卡鎖定 右上餘額

--- a/Home-Index.html
+++ b/Home-Index.html
@@ -164,7 +164,10 @@
 
                     <div class="login-after jq-login-after" style="display: none;">
 
-
+						<div class="btn btn-bg" style="box-shadow :0px 0px 0px 0px" >
+                            <span class="nam">本地额度</span>
+							<span class="head-balance">1</span>
+                        </div>
 
                         <div class="login-member-detail jq-login-member-detail jq-cancelBubble">
 
