--- a/Member-Balance.html
+++ b/Member-Balance.html
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="login-after jq-login-after" style="display: none;">
-
+						<div class="btn btn-bg" style="box-shadow :0px 0px 0px 0px" >                            <span class="nam">本地额度</span>							<span class="head-balance">1</span>                        </div>
                         <div class="login-member-detail jq-login-member-detail jq-cancelBubble">
 
                             <span class="member-nam jq-member-nam"></span>
